# memory-reader

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
example/: CMakeLists.txt
example/example-01-process/: CMakeLists.txt  main.cpp
example/example-02-single-process-daemon/: CMakeLists.txt  main.cpp
example/example-03-signature/: CMakeLists.txt  main.cpp
example/example-04-offsets/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt
source/inc/memory-reader/: all.h
source/inc/memory-reader/feature/: Offsets.h  Pattern.h  Signature.h
source/inc/memory-reader/process/: AbstractProcess.h  IProcessAlive.h  IProcessSynchronize.h  IReadMemory.h  IReadMemoryWithCacheHint.h  Process.h  SingleProcessDaemon.h
source/inc/memory-reader/utils/: codecvt.h  doxygen.h  macro.h
source/src/process/: AbstractProcess.cpp  Process_linux.cpp  Process_windows.cpp  SingleProcessDaemon.cpp
test/: CMakeLists.txt
test/src/: TestPattern.cpp  TestProcess.cpp
